# personal-website

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  __init__.py  app.py  compose.yml  gunicorn_config.py  json.json  pyproject.toml  requirements.txt
.do/: app.yaml  deploy.template.yaml
app/: __init__.py  config.py
app/main/: routes.py  utils.py
app/static/: package-lock.json  package.json
app/static/css/: blog.css  btn.css  carousel.css  loader.css  main.css  pushbar.css  python-theme.css  scrollbar  scrollbar.css  spinner.css  textgrow.css  textgrow.css.map  textgrow.scss
app/static/images/: Thumbs.db
app/static/images/index/: Thumbs.db
app/static/images/language-logos/: Thumbs.db  reshape.py
app/static/images/stock-charts/: chart.ipynb
app/static/scripts/: balance_sheet.js  main.js  navbar.js  particles.js  scrolling-text.js
app/templates/: about.html  blog.html  home.html  layout.html  projects.html  resume.html
app/templates/blogs/: International Economics Project 1.html  targert.html  target.html
app/templates/sections/: about.html  connect.html  contact.html  intro.html  stock.html
personal_website/: run.py
personal_website/app/main/: routes.py
personal_website/app/static/css/: main.css
personal_website/app/static/scripts/: main.js
personal_website/app/templates/: about.html  home.html  layout.html  resume.html
