[tool.poetry]
name = "personal website"
version = "1.0"
description = "My career website, never waste a second"
authors = ["Samuel Adams <samuel.grant.adams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
blinker = "1.6.2"
click = "8.1.4"
colorama = "0.4.6"
flask = "2.3.2"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
numpy = "1.25.1"
pandas = "2.0.3"
python-dateutil = "2.8.2"
pytz = "2023.3"
six = "1.16.0"
tzdata = "2023.3"
werkzeug = "2.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
