[tool.poetry]
name = "personal-website"
version = "1.3"
description = ""
authors = ["Sam Adams"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.1.2"
flask = "^3.0.0"
yfinance = "^0.2.31"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
